support: cycle focus, open floating windows at center

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -108,4 +108,4 @@ bindd = SUPER, M, Toggle group, togglegroup
 unbind = SUPER SHIFT, G
 bindd = SUPER SHIFT, M, Move active window out of group, moveoutofgroup
 
-bindd = SUPER, SPACE, Focus last window, changegroupactive, f
+bindd = SUPER, SPACE, Toggle special workspace, exec, ~/.config/hypr/custom/togglespecial.sh
