rebind: workspace navigation

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -4,7 +4,6 @@
 $terminal = uwsm-app -- wezterm-gui start --always-new-process --cwd="$(omarchy-cmd-terminal-cwd)"
 $browser = omarchy-launch-browser brave
 
-# bindd = SUPER, RETURN, Terminal, exec, $terminal
 bindd = SUPER, RETURN, Terminal, exec, $terminal
 # bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
 bindd = SUPER, E, File manager, exec, uwsm-app -- nautilus --new-window
@@ -52,11 +51,12 @@ bindd = SUPER ALT, SLASH, Omarchy menu, exec, omarchy-menu
 unbind = SUPER, SPACE
 bindd = SUPER, SLASH, Launch apps, exec, omarchy-launch-walker
 
+bindd = SUPER SHIFT, RETURN, Floating terminal, exec, [tag floating] $terminal
+
 unbind = SUPER, T # Toggle window floating/tiling
-bindd = SUPER, SPACE, Cycle Next, cyclenext
 
 unbind = SUPER SHIFT, SPACE # Toggle top bar
-bindd = SUPER SHIFT, SPACE, Toggle window floating/tiling, togglefloating
+bindd = SUPER SHIFT, SPACE, Toggle window floating/tiling, exec, ~/.config/hypr/custom/float.sh
 
 unbind = SUPER, W
 bindd = SUPER SHIFT, Q, Close window, killactive
@@ -103,9 +103,52 @@ bindd = SUPER, PERIOD, Emoji picker, exec, omarchy-launch-walker -m symbols
 gesture = 3, horizontal, workspace
 
 unbind = SUPER, G
-bindd = SUPER, M, Toggle group, togglegroup
-
 unbind = SUPER SHIFT, G
+bindd = SUPER, M, Toggle group, togglegroup
 bindd = SUPER SHIFT, M, Move active window out of group, moveoutofgroup
 
-bindd = SUPER, SPACE, Toggle special workspace, exec, ~/.config/hypr/custom/togglespecial.sh
+bindd = SUPER, SPACE, Toggle special workspace, exec, ~/.config/hypr/custom/cycle.sh
+
+## Rebinding workspace switching
+
+unbind = SUPER, S
+unbind = SUPER ALT, S
+
+unbind = SUPER, code:10
+unbind = SUPER, code:11
+unbind = SUPER, code:12
+unbind = SUPER, code:13
+unbind = SUPER, code:14
+unbind = SUPER, code:15
+unbind = SUPER, code:16
+unbind = SUPER, code:17
+unbind = SUPER, code:18
+unbind = SUPER, code:19
+
+unbind = SUPER SHIFT, code:10
+unbind = SUPER SHIFT, code:11
+unbind = SUPER SHIFT, code:12
+unbind = SUPER SHIFT, code:13
+unbind = SUPER SHIFT, code:14
+unbind = SUPER SHIFT, code:15
+unbind = SUPER SHIFT, code:16
+unbind = SUPER SHIFT, code:17
+unbind = SUPER SHIFT, code:18
+unbind = SUPER SHIFT, code:19
+
+bindd = SUPER, A, Switch to workspace 1, workspace, 1
+bindd = SUPER, S, Switch to workspace 2, workspace, 2
+bindd = SUPER, D, Switch to workspace 3, workspace, 3
+bindd = SUPER, F, Switch to workspace 4, workspace, 4
+bindd = SUPER, G, Switch to workspace 5, workspace, 5
+bindd = SUPER, T, Switch to workspace 6, workspace, 6
+bindd = SUPER, Y, Switch to workspace 7, workspace, 7
+
+# Move active window to a workspace with SUPER + SHIFT + [1-9]
+bindd = SUPER SHIFT, A, Move window to workspace 1, movetoworkspace, 1
+bindd = SUPER SHIFT, S, Move window to workspace 2, movetoworkspace, 2
+bindd = SUPER SHIFT, D, Move window to workspace 3, movetoworkspace, 3
+bindd = SUPER SHIFT, F, Move window to workspace 4, movetoworkspace, 4
+bindd = SUPER SHIFT, G, Move window to workspace 5, movetoworkspace, 5
+bindd = SUPER SHIFT, T, Move window to workspace 6, movetoworkspace, 6
+bindd = SUPER SHIFT, Y, Move window to workspace 7, movetoworkspace, 7
