--- a/dot_config/hypr/looknfeel.conf
+++ b/dot_config/hypr/looknfeel.conf
@@ -32,10 +32,11 @@ dwindle {
 }
 
 animations {
-  enabled = false
+  enabled = true
 }
 
-group {
-  groupbar {
-  }
-}
+bezier = easeInQuart, 0.5, 0, 0.75, 0
+
+animation = workspaces, 1, 1, easeInQuart
+animation = windows, 1, 1, easeInQuart, popin 80%
+
