--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -67,16 +67,16 @@ unbind = SUPER, K
 unbind = SUPER, J
 
 bindd = SUPER, H, Focus left, movefocus, l
-bindd = SUPER, H, Focus left, alterzorder, top
+bind = SUPER, H, alterzorder, top
 
 bindd = SUPER, L, Focus right, movefocus, r
-bindd = SUPER, L, Focus right, alterzorder, top
+bind = SUPER, L, alterzorder, top
 
 bindd = SUPER, J, Focus down, movefocus, d
-bindd = SUPER, J, Focus down, alterzorder, top
+bind = SUPER, J, alterzorder, top
 
 bindd = SUPER, K, Focus up, movefocus, u
-bindd = SUPER, K, Focus up, alterzorder, top
+bind = SUPER, K, alterzorder, top
 
 bindd = SUPER, APOSTROPHE, Toggle split window, togglesplit
 
