--- a/dot_config/hypr/looknfeel.conf
+++ b/dot_config/hypr/looknfeel.conf
@@ -36,7 +36,8 @@ animations {
 }
 
 bezier = easeInQuart, 0.5, 0, 0.75, 0
+bezier = easeInCirc, 0.55, 0, 1, 0.45
 
-animation = workspaces, 1, 1, easeInQuart
-animation = windows, 1, 1, easeInQuart, popin 80%
+animation = workspaces, 1, 1.2, easeInCirc
+animation = windows, 1, 1.2, easeInQuart
 
