--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -55,7 +55,7 @@ bindd = SUPER SHIFT, RETURN, Floating terminal, exec, [tag floating] $terminal
 unbind = SUPER, T # Toggle window floating/tiling
 
 unbind = SUPER SHIFT, SPACE # Toggle top bar
-bindd = SUPER SHIFT, SPACE, Toggle window floating/tiling, exec, ~/.config/hypr/custom/float.sh
+bindd = SUPER SHIFT, SPACE, Toggle window floating/tiling, exec, ~/.config/hypr/custom/togglefloat
 
 unbind = SUPER, W
 bindd = SUPER SHIFT, Q, Close window, killactive
@@ -79,10 +79,10 @@ bind = SUPER, K, alterzorder, top
 
 bindd = SUPER, APOSTROPHE, Toggle split window, togglesplit
 
-bindde = SUPER SHIFT, H, Move window left, exec, ~/.config/hypr/custom/move.sh l
-bindde = SUPER SHIFT, L, Move window right, exec, ~/.config/hypr/custom/move.sh r
-bindde = SUPER SHIFT, K, Move window up, exec, ~/.config/hypr/custom/move.sh u
-bindde = SUPER SHIFT, J, Move window down, exec, ~/.config/hypr/custom/move.sh d
+bindde = SUPER SHIFT, H, Move window left, exec, ~/.config/hypr/custom/move l
+bindde = SUPER SHIFT, L, Move window right, exec, ~/.config/hypr/custom/move r
+bindde = SUPER SHIFT, K, Move window up, exec, ~/.config/hypr/custom/move u
+bindde = SUPER SHIFT, J, Move window down, exec, ~/.config/hypr/custom/move d
 
 unbind = SUPER, U
 unbind = SUPER, I
@@ -113,7 +113,7 @@ unbind = SUPER SHIFT, G
 bindd = SUPER, M, Toggle group, togglegroup
 bindd = SUPER SHIFT, M, Move active window out of group, moveoutofgroup
 
-bindd = SUPER, SPACE, Toggle special workspace, exec, ~/.config/hypr/custom/cycle.sh
+bindd = SUPER, SPACE, Toggle special workspace, exec, ~/.config/hypr/custom/togglecycle
 
 ## Rebinding workspace switching
 
