improve floating focus & look&feel

--- a/dot_config/hypr/input.conf
+++ b/dot_config/hypr/input.conf
@@ -16,6 +16,9 @@ input {
   # Increase sensitivity for mouse/trackpad (default: 0)
   sensitivity = -0.5
 
+  # Specify if and how cursor movement should affect window focus.
+  follow_mouse = 2
+
   touchpad {
     # Use natural (inverse) scrolling
     natural_scroll = true
