--- a/dot_config/hypr/looknfeel.conf
+++ b/dot_config/hypr/looknfeel.conf
@@ -14,14 +14,17 @@ general {
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
   # Use round window corners
-  rounding = 0
+  rounding = 8
 
-  active_opacity = 2.0
-  inactive_opacity = 2.0
+  active_opacity = 1.5
+  inactive_opacity = 0.8
   fullscreen_opacity = 2.0
 
   blur {
-    enabled = false
+    enabled = true
+
+    size = 12
+    passes = 2
   }
 }
 
