cleanup unnecessary things

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -50,7 +50,7 @@ bindd = SUPER ALT, SLASH, Omarchy menu, exec, omarchy-menu
 unbind = SUPER, SPACE
 bindd = SUPER, SLASH, Launch apps, exec, omarchy-launch-walker
 
-bindd = SUPER SHIFT, RETURN, Floating terminal, exec, [tag floating] $terminal
+bindd = SUPER SHIFT, RETURN, Floating terminal, exec, [tag floating-window*] $terminal
 
 unbind = SUPER, T # Toggle window floating/tiling
 
