support more group bindings

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -158,3 +158,10 @@ bindd = SUPER SHIFT, F, Move window to workspace 4, movetoworkspace, 4
 bindd = SUPER SHIFT, G, Move window to workspace 5, movetoworkspace, 5
 bindd = SUPER SHIFT, T, Move window to workspace 6, movetoworkspace, 6
 bindd = SUPER SHIFT, Y, Move window to workspace 7, movetoworkspace, 7
+
+# Groups
+bindd = SUPER, P, Focus the previous group, changegroupactive, b
+bindd = SUPER, N, Focus the next group, changegroupactive, f
+
+bindd = SUPER SHIFT, P, Swap the previous group, movegroupwindow, b
+bindd = SUPER SHIFT, N, Swap the next group, movegroupwindow
