change mouse accel profile

--- a/dot_config/hypr/input.conf
+++ b/dot_config/hypr/input.conf
@@ -14,7 +14,8 @@ input {
   numlock_by_default = true
 
   # Increase sensitivity for mouse/trackpad (default: 0)
-  sensitivity = -0.5
+  sensitivity = 0
+  accel_profile = flat
 
   # Specify if and how cursor movement should affect window focus.
   follow_mouse = 2
