--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -91,10 +91,12 @@ unbind = SUPER, P
 
 bindde = SUPER, U, Decrease width, resizeactive, -10% 0
 bindde = SUPER, I, Increase width, resizeactive, 10% 0
-bindde = SUPER, O, Decrease width, resizeactive, 0 -8%
-bindde = SUPER, P, Increase width, resizeactive, 0 8%
-bindde = SUPER SHIFT, U, Decrease width, resizeactive, -10% -8%
-bindde = SUPER SHIFT, I, Increase width, resizeactive, 10% 8%
+bindde = SUPER, O, Decrease width, resizeactive, 0 -10%
+bindde = SUPER, P, Increase width, resizeactive, 0 10%
+bindde = SUPER SHIFT, U, Decrease width, resizeactive, -10% -10%
+bind = SUPER SHIFT, U, centerwindow
+bindde = SUPER SHIFT, I, Increase width, resizeactive, 10% 10%
+bind = SUPER SHIFT, I, centerwindow
 
 bindd = SUPER SHIFT, C, Center window, centerwindow
 
@@ -158,3 +160,8 @@ bindd = SUPER SHIFT, F, Move window to workspace 4, movetoworkspace, 4
 bindd = SUPER SHIFT, G, Move window to workspace 5, movetoworkspace, 5
 bindd = SUPER SHIFT, T, Move window to workspace 6, movetoworkspace, 6
 bindd = SUPER SHIFT, Y, Move window to workspace 7, movetoworkspace, 7
+
+# Group
+bindd = SUPER ALT, H, Focus the previous group window, changegroupactive, b
+bindd = SUPER ALT, L, Focus the next group window, changegroupactive, f
+
