--- a/dot_config/hypr/input.conf
+++ b/dot_config/hypr/input.conf
@@ -20,6 +20,10 @@ input {
   # Specify if and how cursor movement should affect window focus.
   follow_mouse = 2
 
+  float_switch_override_focus = 0
+
+  mouse_refocus = false
+
   touchpad {
     # Use natural (inverse) scrolling
     natural_scroll = true
@@ -35,7 +39,8 @@ input {
 # Scroll nicely in the terminal
 windowrule = scrolltouchpad 1.5, class:(Alacritty|kitty)
 windowrule = scrolltouchpad 0.2, class:com.mitchellh.ghostty
+windowrule = scrolltouchpad 1.5, class:org.wezfurlong.wezterm
 
 # Enable touchpad gestures for changing workspaces
 # See https://wiki.hyprland.org/Configuring/Gestures/
-# gesture = 3, horizontal, workspace
+gesture = 3, horizontal, workspace
