improve look&feel, improve listener script

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -163,3 +163,5 @@ bindd = SUPER SHIFT, Y, Move window to workspace 7, movetoworkspace, 7
 bindd = SUPER ALT, H, Focus the previous group window, changegroupactive, b
 bindd = SUPER ALT, L, Focus the next group window, changegroupactive, f
 
+# Mouse
+bindm = , mouse:274, movewindow
