--- a/dot_config/hypr/looknfeel.conf
+++ b/dot_config/hypr/looknfeel.conf
@@ -34,6 +34,14 @@ dwindle {
   # single_window_aspect_ratio = 1 1
 }
 
+group {
+  groupbar {
+    col.active = 0xFF383838
+    col.inactive = 0x88282828
+    gradient_rounding = 16
+  }
+}
+
 animations {
   enabled = true
 }
@@ -43,4 +51,3 @@ bezier = easeInCirc, 0.55, 0, 1, 0.45
 
 animation = workspaces, 1, 1.2, easeInCirc
 animation = windows, 1, 1.2, easeInQuart
-
