improve look&feel, add ignore rules for floating window listeners

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -22,3 +22,8 @@ source = ~/.config/hypr/autostart.conf
 
 # Add any other personal Hyprland configuration below
 # windowrule = workspace 5, class:qemu
+windowrule = tag +modal, class:DBeaver, title:negative:^DBeaver.*
+windowrule = tag +modal, class:polkit-gnome-authentication-agent-1
+windowrule = tag +modal, class:^xdg-desktop-portal.*
+windowrule = tag +floating-window, class:^xdg-desktop-portal.*
+windowrule = tag +modal, class:^org\.omarchy\..*
