--- a/dot_config/hypr/looknfeel.conf
+++ b/dot_config/hypr/looknfeel.conf
@@ -17,14 +17,11 @@ decoration {
   rounding = 8
 
   active_opacity = 2.0
-  inactive_opacity = 1.0
+  inactive_opacity = 2.0
   fullscreen_opacity = 2.0
 
   blur {
-    enabled = true
-
-    size = 12
-    passes = 2
+    enabled = false
   }
 }
 
@@ -50,4 +47,4 @@ bezier = easeInQuart, 0.5, 0, 0.75, 0
 bezier = easeInCirc, 0.55, 0, 1, 0.45
 
 animation = workspaces, 1, 1.2, easeInCirc
-animation = windows, 1, 1.2, easeInQuart
+animation = windows, 1, 1.2, easeInCirc
