improve look&feel, bindings & add some desktop entries

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -111,7 +111,9 @@ bindd = SUPER, PERIOD, Emoji picker, exec, omarchy-launch-walker -m symbols
 unbind = SUPER, G
 unbind = SUPER SHIFT, G
 bindd = SUPER, M, Toggle group, togglegroup
-bindd = SUPER SHIFT, M, Move active window out of group, moveoutofgroup
+bindd = SUPER ALT, M, Move active window out of group, moveoutofgroup
+
+bindd = SUPER ALT, P, Pin a floating window, pin
 
 bindd = SUPER, SPACE, Toggle special workspace, exec, ~/.config/hypr/custom/togglecycle
 
@@ -142,6 +144,17 @@ unbind = SUPER SHIFT, code:17
 unbind = SUPER SHIFT, code:18
 unbind = SUPER SHIFT, code:19
 
+unbind = SUPER ALT, code:10
+unbind = SUPER ALT, code:11
+unbind = SUPER ALT, code:12
+unbind = SUPER ALT, code:13
+unbind = SUPER ALT, code:14
+unbind = SUPER ALT, code:15
+unbind = SUPER ALT, code:16
+unbind = SUPER ALT, code:17
+unbind = SUPER ALT, code:18
+unbind = SUPER ALT, code:19
+
 bindd = SUPER, A, Switch to workspace 1, workspace, 1
 bindd = SUPER, S, Switch to workspace 2, workspace, 2
 bindd = SUPER, D, Switch to workspace 3, workspace, 3
@@ -162,6 +175,14 @@ bindd = SUPER SHIFT, Y, Move window to workspace 7, movetoworkspace, 7
 # Group
 bindd = SUPER ALT, H, Focus the previous group window, changegroupactive, b
 bindd = SUPER ALT, L, Focus the next group window, changegroupactive, f
+bindd = SUPER ALT, J, Merge to the left group, moveintogroup, l
+bindd = SUPER ALT, K, Merge to the right group, moveintogroup, r
+
+bindd = SUPER ALT, A, Focus the group 1, changegroupactive, 1
+bindd = SUPER ALT, S, Focus the group 2, changegroupactive, 2
+bindd = SUPER ALT, D, Focus the group 3, changegroupactive, 3
+bindd = SUPER ALT, F, Focus the group 4, changegroupactive, 4
+bindd = SUPER ALT, G, Focus the group 5, changegroupactive, 5
 
 # Mouse
 bindm = , mouse:274, movewindow
