--- a/dot_config/hypr/looknfeel.conf
+++ b/dot_config/hypr/looknfeel.conf
@@ -33,7 +33,8 @@ dwindle {
 
 group {
   groupbar {
-    col.active = 0xFF383838
+    col.active = 0xffd4be98
+    text_color = 0xff282828
     col.inactive = 0x88282828
     gradient_rounding = 16
   }
