improve Hyprland rules

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -27,5 +27,7 @@ windowrule = tag +modal, class:polkit-gnome-authentication-agent-1
 windowrule = tag +modal, class:^xdg-desktop-portal.*
 windowrule = tag +floating-window, class:^xdg-desktop-portal.*
 windowrule = tag +modal, class:^org\.omarchy\..*
+windowrule = tag +modal, class:netpad, title:negative:^.* - NetPad$
+windowrule = tag +floating-window, class:netpad, title:negative:^.* - NetPad$
 
 windowrule = bordersize 4, bordercolor rgb(d79921), rounding 0, pinned:1
