improve listener scripts, update bindings

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -79,23 +79,23 @@ bind = SUPER, K, alterzorder, top
 
 bindd = SUPER, APOSTROPHE, Toggle split window, togglesplit
 
-bindde = SUPER SHIFT, H, Move window left, exec, ~/.config/hypr/custom/move l
-bindde = SUPER SHIFT, L, Move window right, exec, ~/.config/hypr/custom/move r
-bindde = SUPER SHIFT, K, Move window up, exec, ~/.config/hypr/custom/move u
-bindde = SUPER SHIFT, J, Move window down, exec, ~/.config/hypr/custom/move d
+bindd = SUPER SHIFT, H, Move window left, exec, ~/.config/hypr/custom/move l
+bindd = SUPER SHIFT, L, Move window right, exec, ~/.config/hypr/custom/move r
+bindd = SUPER SHIFT, K, Move window up, exec, ~/.config/hypr/custom/move u
+bindd = SUPER SHIFT, J, Move window down, exec, ~/.config/hypr/custom/move d
 
 unbind = SUPER, U
 unbind = SUPER, I
 unbind = SUPER, O
 unbind = SUPER, P
 
-bindde = SUPER, U, Decrease width, resizeactive, -10% 0
-bindde = SUPER, I, Increase width, resizeactive, 10% 0
-bindde = SUPER, O, Decrease width, resizeactive, 0 -10%
-bindde = SUPER, P, Increase width, resizeactive, 0 10%
-bindde = SUPER SHIFT, U, Decrease width, resizeactive, -10% -10%
+bindd = SUPER, U, Decrease width, resizeactive, -10% 0
+bindd = SUPER, I, Increase width, resizeactive, 10% 0
+bindd = SUPER, O, Decrease width, resizeactive, 0 -10%
+bindd = SUPER, P, Increase width, resizeactive, 0 10%
+bindd = SUPER SHIFT, U, Decrease width, resizeactive, -10% -10%
 bind = SUPER SHIFT, U, centerwindow
-bindde = SUPER SHIFT, I, Increase width, resizeactive, 10% 10%
+bindd = SUPER SHIFT, I, Increase width, resizeactive, 10% 10%
 bind = SUPER SHIFT, I, centerwindow
 
 bindd = SUPER SHIFT, C, Center window, centerwindow
@@ -114,8 +114,18 @@ bindd = SUPER, M, Toggle group, togglegroup
 bindd = SUPER ALT, M, Move active window out of group, moveoutofgroup
 
 bindd = SUPER ALT, P, Pin a floating window, pin
+bindd = SUPER ALT CTRL, P, Pop window out & pin it, exec, omarchy-hyprland-window-pop
 
 bindd = SUPER, SPACE, Toggle special workspace, exec, ~/.config/hypr/custom/togglecycle
+
+unbind = SUPER CTRL, SPACE
+bindd = SUPER CTRL, SLASH, Next background in theme, exec, omarchy-theme-bg-next
+unbind = SUPER, BACKSPACE
+
+unbind = SUPER, W
+
+unbind = SUPER, ESCAPE
+bindd = SUPER, X, Power menu, exec, omarchy-menu system
 
 ## Rebinding workspace switching
 
