--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -3,6 +3,9 @@ general.import = [ "~/.config/omarchy/current/theme/alacritty.toml" ]
 [env]
 TERM = "xterm-256color"
 
+[colors.primary]
+background = '#1b1b1b'
+
 [font]
 normal = { family = "0xProto Nerd Font", style = "Regular" }
 bold = { family = "0xProto Nerd Font", style = "Bold" }
