--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -1,7 +1,7 @@
 # Application bindings
 # $terminal = uwsm-app -- xdg-terminal-exec --working-directory="$(omarchy-cmd-terminal-cwd)"
 $browser = omarchy-launch-browser
-$terminal = uwsm-app -- wezterm-gui start --always-new-process --cwd="$(omarchy-cmd-terminal-cwd)"
+$terminal = uwsm-app -- alacritty --working-directory "$(omarchy-cmd-terminal-cwd)"
 
 bindd = SUPER, RETURN, Terminal, exec, $terminal
 # bindd = SUPER SHIFT, F, File manager, exec, uwsm-app -- nautilus --new-window
