feat(waybar, hypr/bindings): Revise unminimizing windows, unbind Super+Alt+F/G shortcuts

--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -131,6 +131,8 @@ bindd = SUPER, X, Power menu, exec, omarchy-menu system
 
 unbind = SUPER, S
 unbind = SUPER ALT, S
+unbind = SUPER ALT, F
+unbind = SUPER ALT, G
 
 unbind = SUPER, code:10
 unbind = SUPER, code:11
