refactor(hypr): add key binding for opening and adjust window rules

--- a/dot_config/alacritty/alacritty.toml
+++ b/dot_config/alacritty/alacritty.toml
@@ -20,7 +20,8 @@ decorations = "None"
 [keyboard]
 bindings = [
 { key = "Insert", mods = "Shift", action = "Paste" },
-{ key = "Insert", mods = "Control", action = "Copy" }
+{ key = "Insert", mods = "Control", action = "Copy" },
+{ key = "O", mods = "Shift", mode = "Vi", action = "Open"},
 ]
 
 [cursor]
