--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -30,4 +30,4 @@ windowrule = tag +modal, class:^org\.omarchy\..*
 windowrule = tag +modal, class:netpad, title:negative:^.* - NetPad$
 windowrule = tag +floating-window, class:netpad, title:negative:^.* - NetPad$
 
-windowrule = bordersize 4, bordercolor rgb(d79921), rounding 0, pinned:1
+windowrule = bordersize 6, bordercolor rgb(076678), pinned:1
