--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -23,11 +23,10 @@ source = ~/.config/hypr/autostart.conf
 # Add any other personal Hyprland configuration below
 # windowrule = workspace 5, class:qemu
 windowrule = tag +modal, class:DBeaver, title:negative:^DBeaver.*
+windowrule = tag +floating-window, initialClass:java, initialTitle:Dbeaver
 windowrule = tag +modal, class:polkit-gnome-authentication-agent-1
-windowrule = tag +modal, class:^xdg-desktop-portal.*
-windowrule = tag +floating-window, class:^xdg-desktop-portal.*
+windowrule = tag +modal, tag +floating-window, class:^xdg-desktop-portal.*
 windowrule = tag +modal, class:^org\.omarchy\..*
-windowrule = tag +modal, class:netpad, title:negative:^.* - NetPad$
-windowrule = tag +floating-window, class:netpad, title:negative:^.* - NetPad$
+windowrule = tag +modal, tag +floating-window, class:netpad, title:^(Settings|.* - Properties)$
 
 windowrule = bordersize 6, bordercolor rgb(076678), pinned:1
