refactor(hypr): add bindings for workspace 8 and update window rules
refactor(hyprland.conf): update window rule for floating workspaces

--- a/dot_config/hypr/hyprland.conf
+++ b/dot_config/hypr/hyprland.conf
@@ -28,5 +28,5 @@ windowrule = tag +modal, class:polkit-gnome-authentication-agent-1
 windowrule = tag +modal, tag +floating-window, class:^xdg-desktop-portal.*
 windowrule = tag +modal, class:^org\.omarchy\..*
 windowrule = tag +modal, tag +floating-window, class:netpad, title:^(Settings|.* - Properties)$
-
 windowrule = bordersize 6, bordercolor rgb(076678), pinned:1
+windowrulev2 = float, workspace:8
