--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -174,6 +174,7 @@ bindd = SUPER, F, Switch to workspace 4, workspace, 4
 bindd = SUPER, G, Switch to workspace 5, workspace, 5
 bindd = SUPER, T, Switch to workspace 6, workspace, 6
 bindd = SUPER, Y, Switch to workspace 7, workspace, 7
+bindd = SUPER, code:19, Switch to workspace 8, workspace, 8
 
 # Move active window to a workspace with SUPER + SHIFT + [1-9]
 bindd = SUPER SHIFT, A, Move window to workspace 1, movetoworkspace, 1
@@ -183,6 +184,7 @@ bindd = SUPER SHIFT, F, Move window to workspace 4, movetoworkspace, 4
 bindd = SUPER SHIFT, G, Move window to workspace 5, movetoworkspace, 5
 bindd = SUPER SHIFT, T, Move window to workspace 6, movetoworkspace, 6
 bindd = SUPER SHIFT, Y, Move window to workspace 7, movetoworkspace, 7
+bindd = SUPER SHIFT, code:19, Move window to workspace 7, movetoworkspace, 8
 
 # Group
 bindd = SUPER ALT, H, Focus the previous group window, changegroupactive, b
