refactor(hypr): add group window movement bindings and adjust looknfeel settings

--- a/dot_config/hypr/looknfeel.conf
+++ b/dot_config/hypr/looknfeel.conf
@@ -3,9 +3,10 @@
 # https://wiki.hyprland.org/Configuring/Variables/#general
 general {
   # No gaps between windows or borders
-  gaps_in = 2
-  gaps_out = 4
-  # border_size = 0
+  gaps_in = 0
+  gaps_out = 0
+
+  border_size = 1
 
   # Use master layout instead of dwindle
   # layout = master
@@ -14,7 +15,7 @@ general {
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
 decoration {
   # Use round window corners
-  rounding = 8
+  rounding = 0
 
   active_opacity = 2.0
   inactive_opacity = 2.0
@@ -35,17 +36,20 @@ group {
   groupbar {
     col.active = 0xffd4be98
     text_color = 0xff282828
-    col.inactive = 0x88282828
-    gradient_rounding = 16
+    col.inactive = 0xaa868686
+    text_color_inactive = 0xff282828
+    gradient_rounding = 0
+    gaps_out = 0
+    gaps_in = 2
+    indicator_gap = 2
   }
 }
 
 animations {
-  enabled = true
+  enabled = false
 }
 
-bezier = easeInQuart, 0.5, 0, 0.75, 0
 bezier = easeInCirc, 0.55, 0, 1, 0.45
 
-animation = workspaces, 1, 1.2, easeInCirc
-animation = windows, 1, 1.2, easeInCirc
+animation = workspaces, 1, 0.6, easeInCirc
+animation = windows, 1, 0.6, easeInCirc
