--- a/dot_config/hypr/bindings.conf
+++ b/dot_config/hypr/bindings.conf
@@ -191,12 +191,11 @@ bindd = SUPER ALT, H, Focus the previous group window, changegroupactive, b
 bindd = SUPER ALT, L, Focus the next group window, changegroupactive, f
 bindd = SUPER ALT, J, Merge to the left group, moveintogroup, l
 bindd = SUPER ALT, K, Merge to the right group, moveintogroup, r
+bindd = SUPER ALT, COMMA, Move group window to the left, movegroupwindow, b
+bindd = SUPER ALT, PERIOD, Move group window to the right, movegroupwindow
 
 bindd = SUPER ALT, A, Focus the group 1, changegroupactive, 1
 bindd = SUPER ALT, S, Focus the group 2, changegroupactive, 2
 bindd = SUPER ALT, D, Focus the group 3, changegroupactive, 3
 bindd = SUPER ALT, F, Focus the group 4, changegroupactive, 4
 bindd = SUPER ALT, G, Focus the group 5, changegroupactive, 5
-
-# Mouse
-bindm = , mouse:274, movewindow
