refactor(hypr): update input and waybar scripts for better cursor handling and workspace management

--- a/dot_config/hypr/input.conf
+++ b/dot_config/hypr/input.conf
@@ -36,6 +36,10 @@ input {
   }
 }
 
+cursor {
+    no_warps = true
+}
+
 # Scroll nicely in the terminal
 windowrule = scrolltouchpad 1.5, class:(Alacritty|kitty)
 windowrule = scrolltouchpad 0.2, class:com.mitchellh.ghostty
